# vibe-coding

./: .aider.conf.yml  .coderabbit.yaml  .coverage  .coveragerc  .gitignore  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.midaz-healthcheck  README.md  check-tools-integrity.sh  coverage.json  ctio-watcher.sh  docker-compose.midaz.yml  memory-autosync-watcher.sh  mkdocs.yml  pyproject.toml  sync.bat
.canon/: .active-profile  .synced-at  CANON.md
.canon/modules/: CORE.md  DECISION.md
.canon/rules/: AUTOMATION.md  (+2 more)
.claude/: CLAUDE.md  settings.json
.qoder/: config.yml  context.md
.semgrep/: banxe-rules.yml
.sync-backup-20260406-035129/: AGENTS.md
docs/: BOT-ERROR-PATTERNS.md  CHATGPT-SYNC-CHECKLIST.md  COLLAB.md  COMPLIANCE_ARCH.md  GAP-6-AUTORESEARCH.md  HITL-DASHBOARD-SPEC.md  MCP-BEST-PRACTICES.md  MEMORY.md  MIROFISH-SCENARIOS.md  OPENCLAW-REFERENCE.md  SANCTIONS_POLICY.md  SETUP-GUIDE.md  SOUL-PROTECTION.md  SOUL.md  SYSTEM-STATE.md  VERIFICATION-CANON.md  bot-archive-analysis.md  diagnostic-report.md  index.md  screener-app-v1.1.py
ruflo/: config.yaml  start-ruflo.sh
scripts/: activate-metaclaw.sh  aider-banxe.sh  apply-feedback.sh  backup-clickhouse-training.sh  bot-doctor.sh  check-agent-instructions.sh  check-bot-now.sh  copy-prompts-to-active-workspace.sh  create-ctio-package.sh  create-oleg-ctio.sh  cron-adversarial-sim.sh  cron-deepeval-report.sh  debug-workspace-path.sh  deep-diag.sh  deploy-agents-md.sh  deploy-all.sh  deploy-backlog-phase16.sh  deploy-decision-event-log.sh  deploy-emergency-stop.sh  deploy-gap1-auto-verify.sh  deploy-gap3-promptfoo.sh  deploy-gap5-drift-monitor.sh  deploy-phase1-watchman-pep.sh  deploy-phase2-jube.sh  deploy-phase2-marble.sh  deploy-phase3-opensanctions.sh  deploy-sprint10-g02-g03.sh  deploy-sprint6.sh  deploy-verify-api.sh  detach-mycarmibot.sh  diagnose-ports-and-services.sh  diagnose-telegram.sh  export-openapi-schema.sh  fix-all-broken-configs.sh  fix-all-xfce-final.sh  fix-all.sh  fix-autosync-git-pull.sh  fix-bot-and-rdp.sh  fix-bot-auto-read-memory.sh  fix-bot-compliance.sh  (+121 more)
(+175 files in other folders)
